fix bottom section mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,1 +1,5 @@
-
+section {
+  &.container {
+    padding-bottom: 10rem;
+  }
+}
